feat(jqwik-micronaut): Ported extension back to Java 8.
Signed-off-by: Nahuel <12597182+Nahuel92@users.noreply.github.com>